add rest of form fields and configure output

--- a/Views/Home/form.cshtml
+++ b/Views/Home/form.cshtml
@@ -30,8 +30,8 @@
           <input id='animal' name='animal' class='form-control' type='text'>
         </div>
         <div class='form-group'>
-          <label for='noun'>A Single Noun</label>
-          <input id='noun' name='noun' class='form-control' type='text'>
+          <label for='nouns2'>Another Plural Noun</label>
+          <input id='nouns2' name='nouns2' class='form-control' type='text'>
         </div>
         <button type='submit' class='btn'>Go!</button>
       </form>
