--- a/Views/Home/mad_lib.cshtml
+++ b/Views/Home/mad_lib.cshtml
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <h1>Here is your lib</h1>
-      <p>One day, @Model.GetName() went to the store ADVERB to get some NOUNS. Unfortunately before that person got there a car came out of nowhere and hit their VEHICLE. NAME got out of the VEHICLE and said many bad words at the other driver. But it wasn't a person driving the car at all - it was a ANIMAL. Now they're best NOUN.</p>
+      <p>One day, @Model.GetName() went to the store @Model.GetAdverb() to get some @Model.GetNouns(). Unfortunately before that person got there a car came out of nowhere and hit their @Model.GetVehicle(). @Model.GetName() got out of the @Model.GetVehicle() and said many bad words at the other driver. But it wasn't a person driving the car at all - it was a @Model.GetAnimal(). Now they're best @Model.GetNouns2().</p>
     </div>
   </body>
 </html>
